courseware-generator/v28/content-guide.md
# 课件内容生成指南

---

## 一、工作流总览

```
步骤 1  初始化：调用 continue_ask 向用户确认课件偏好参数（⏱ 倒计时自动确认）
  ↓
步骤 2  检索：根据确认的参数，搜索原文 / 教案 / 教学资料
  ↓
步骤 3  规划：确定教学目标 → 设计课件结构 → 逐页大纲（含内容 + 交互）
  ↓
步骤 4  生成：创建 HTML 骨架 → 分批生成页面内容 → 逐批注入骨架
  ↓
步骤 5  验收与交付：逐页核对大纲 → 交付
```

> **⚠️ 核心原则：趁用户在场先确认，确认不阻塞。** 用户发完需求后注意力最集中，立即调用 `continue_ask` 确认偏好参数（带倒计时，超时自动确认）；确认后再检索资料、规划大纲、分批生成。

---

## 二、步骤 1 —— 初始化课件项目（调用 `continue_ask`）

**⚠️ 硬性要求：步骤 1 只做一件事——调用 `continue_ask` 向用户确认参数。禁止在本步骤中同时调用搜索工具、开始规划或执行任何其他操作。必须等 `continue_ask` 返回结果（用户确认或倒计时自动确认）后，才能进入步骤 2 检索。**

用户发出课件需求后，**立即调用 `continue_ask` 确认偏好参数**，趁用户还在界面上。

### 1.1 参数列表

| 参数 | 是否必填 | 说明 | 来源 |
|------|----------|------|------|
| **课题** | 必填 | 课件的主题 / 课文名 / 知识点 | 用户输入 |
| **年级** | 必填 | 学段 + 年级 | 用户输入 或 从课题推断 |
| **教材版本** | 必填 | 人教版 / 北师大版 / 苏教版等 | 用户输入 或 默认「人教版」 |
| **课型** | 必填 | 新授课 / 复习课 / 练习课 | 用户输入 或 默认「新授课」 |
| **页数** | 必填 | 课件总页数（含封面与结束页） | 用户输入 或 默认 10 页 |
| **教学重点** | 选填 | 用户希望重点讲解的内容 | 用户输入 或 留空（后续检索后由 AI 确定） |

### 1.2 执行规则

1. **整理已知信息**：从用户输入中提取已提供的参数。
2. **补全缺失项**：对用户未指定的参数，根据课题名称做基本推断或使用合理默认值。
3. **只调用 `continue_ask`，不调用任何其他工具**：本步骤禁止同时调用搜索工具、文件操作或任何其他工具。因为检索必须基于用户确认后的参数（课题+年级+教材版本）才有意义，在确认之前检索可能搜错方向。

### 1.3 调用 `continue_ask` 工具（⏱ 带倒计时）

**必须调用 `continue_ask` 工具**向用户呈现参数并请求确认，**不能仅用普通文本消息代替**。

**确认清单内容示例**：

```
⏱ 课件信息确认（倒计时结束后自动确认）

• 课题：《少年闰土》
• 年级：小学六年级
• 教材版本：人教版（部编版）
• 课型：新授课
• 页数：10 页
• 教学重点：（可填写，如"人物描写手法"，不填则由 AI 根据教案确定）

如需调整，请直接在聊天里回复您的想法。我会以您的说明来制作课件～
```

### 1.4 倒计时与自动确认机制

- `continue_ask` 呈现后启动**倒计时**。
- **用户在倒计时内回复**：按用户修改后的参数继续。
- **倒计时结束用户未回复**：以当前参数（用户已提供 + 推断 + 默认值）**自动确认**，直接进入步骤 2。
- **禁止无限等待**：不得因为用户未回复就停滞不前。倒计时到期即视为用户认可当前参数。

---

## 三、步骤 2 —— 检索原文与教学资料

**⚠️ 硬性要求：不得在缺乏资料的情况下做任何课件内容规划。必须先完成检索，再进入步骤 3 规划。**

### 2.1 须检索的内容

| 检索类型 | 搜索关键词示例 | 目的 |
|----------|----------------|------|
| **原文 / 原始材料** | 「少年闰土 课文原文」「分数乘法 定义与公式」 | 获取准确的课文文本、知识点定义、公式等一手内容，确保课件引用准确、不编造。 |
| **教案 / 教学设计** | 「少年闰土 六年级 教案」「分数乘法 小学 教学设计」 | 了解该课题的教学目标、环节划分、课时安排、重难点，为步骤 3 的结构规划提供依据。 |
| **补充资料**（可选） | 「少年闰土 写作背景 鲁迅」「分数乘法 常见易错题」 | 丰富课件深度：背景知识、拓展素材、典型错题等。 |

### 2.2 检索要求

- 至少完成**原文 + 教案**两类检索，各取 1～2 份有效结果阅读。
- 阅读后须提炼出以下信息，供步骤 3 规划使用：
  - 课文/知识点的**核心内容摘要**（原文关键段落、公式、定义等）；
  - 教案中的**教学目标、环节划分、课时安排、重难点**；
  - 可用的**补充素材**（背景故事、拓展知识、易错点等）。
- 若步骤 1 中「教学重点」留空，此时根据检索到的教案重难点确定。

---

## 四、步骤 3 —— 规划课件结构与逐页大纲

基于步骤 1 确认的偏好参数和步骤 2 的检索资料，依次完成以下子步骤。

### 3.1 确定教学目标

- **学习目标**：1～3 条，尽量**可观测**（如「能正确朗读课文并概括闰土的四件事」），避免仅用「了解」「理解」。
- **重点与难点**：各 1～2 条。
- 目标须与用户在步骤 1 中确认的**教学重点、课型**对齐，同时参考步骤 2 检索到的教案目标。

### 3.2 设计整体结构

用一句话概括课件叙事线，标明每段的**教学功能**与**页数分配**：

> 示例：封面(1p) → 学习目标(1p) → 课文导入：背景介绍(1p) → 课文精读：四件事(3p) → 人物形象分析(1p) → 写作手法(1p) → 课堂练习(1p) → 小结(1p)

- 总页数须与步骤 1 确认的页数一致。
- 页数分配须服务于教学目标，**不得先定页数再凑内容**。

### 3.3 逐页大纲（核心输出）

**每页须按以下模板填写**，后续生成与验收时逐项核对：

| 字段 | 说明 |
|------|------|
| **页码** | 第几页 |
| **页标题** | 如「课文精读——闰土的四件事」 |
| **页类型** | 封面 / 目录 / 讲解 / 精读 / 分析 / 例题 / 练习 / 讨论 / 小结 / 结束 |
| **服务的学习目标** | 本页对应哪条目标（标序号） |
| **必须出现的具体内容** | **逐条列出**，具体到可核对。如：① 课文第3段原文引用 ② 「雪地捕鸟」事件概括1句 ③ 闰土动作描写摘录2处 ④ 对应的人物特点归纳1句 |
| **交互设计** | 本页的互动功能。如：点击显示答案 / 选择题点选判对错 / 拖拽排序 / 填空输入 / 动画逐步展示 / 无交互（纯展示）。**禁止设计依赖方向键（↑↓←→）或空格键的交互**，这些按键已被壳框架占用于翻页，会产生冲突。 |
| **生成复杂度** | 根据交互设计和内容量评估本页的代码生成复杂度，标注权重：**轻量(1)** / **中等(2)** / **重量(4)** / **超重(6)**。用于步骤 4 的分批装箱。评估标准见 3.4 节。 |
| **与前后页的衔接** | 如「上一页导入背景，本页进入课文精读；下一页继续第二件事」 |

**规划原则**：
- 内容必须基于步骤 2 检索到的**真实原文和资料**，禁止凭空编造课文内容或知识点。
- 每页内容量须匹配 16:9 单屏画布，**不过满也不过空**。内容多则拆页，少则合并或补充。
- 含交互的页须注明「须支持完成态」（用于倒序翻页时直接展示结果）。
- **禁止使用方向键（↑↓←→）和空格键作为交互手段**：壳框架在放映模式下会无条件拦截这些按键用于翻页，页面内的方向键/空格键监听将不会生效。交互应基于**点击、触摸、拖拽**等不与翻页冲突的方式。

### 3.4 页面生成复杂度评估标准

大纲中每页须标注生成复杂度权重，用于步骤 4 的分批装箱：

| 权重 | 等级 | 典型页面 | 特征 |
|------|------|---------|------|
| **1** | 轻量 | 封面、目录、小结、结束 | 纯展示，无交互，HTML/CSS 简单，代码量少 |
| **2** | 中等 | 讲解/精读（纯展示）、分析/讨论、含简单事件的页面 | 有一定内容量和排版复杂度；JS 仅限简单事件处理（见下方判定标准） |
| **4** | 重量 | 选择题、填空题、含交互的讲解页（点击展开/逐步展示） | 需要交互逻辑 + saveState/restoreState 状态管理 |
| **6** | 超重 | 拖拽/排序题、多步骤复杂动画、组合交互页 | 大量 JS 逻辑，复杂 DOM 操作，多状态管理 |

**权重 2 vs 4 的判定标准**（关键区分）：

| 判定条件 | 权重 2（中等） | 权重 4（重量） |
|----------|-------------|-------------|
| JS 代码量 | ≤ 10 行，仅简单事件处理 | > 10 行，含交互流程控制 |
| 典型 JS 用途 | `audio.play()`、单个按钮切换显示/隐藏、简单 CSS 类切换 | 答题判断、输入校验、动画步骤控制、计分逻辑 |
| 是否需要 saveState | **不需要**（页面无用户产生的状态需保存） | **需要**（用户答题结果、展开状态等须在翻页后恢复） |
| DOM 操作 | 无或极少（如切换一个 class） | 动态修改多个元素的内容、样式或可见性 |

> **简单规则**：如果页面不需要实现 saveState/restoreState，就不是权重 4。音频播放按钮、单纯的样式切换不算交互复杂度。

**其他评估要点**：
- 一页同时含多种交互（如上半部分展示 + 下半部分选择题）按最高复杂度的交互评估。
- 拿不准时就高不就低。

规划完成后**直接进入步骤 4 生成**，无需等待用户确认大纲。

---

## 五、步骤 4 —— 创建骨架并分批注入页面内容

### 5.1 核心原则：骨架 + 按复杂度分批增量注入

> **正确做法**：先创建包含注入标记的 **HTML 骨架文件**，然后根据大纲中各页的**生成复杂度权重**进行分批，每批通过 `multi_edit` 将 `<template>` 标签**注入到骨架文件的标记位置**。每批内容只输出一次，直接到位，无需额外的组装步骤。
>
> **⚠️ 分批的目的是保证生成质量，不是为了分批而分批。** 如果整个课件的总权重 ≤ 20，应当一批生成全部页面。禁止在总权重允许的情况下人为拆分成多批。

**优势**：
- 每批内容只输出一次，零重复，节省 Token
- 按复杂度动态分批，简单课件一批搞定，复杂课件自动多分批
- 注入标记 `<!-- CW_PAGES -->` 是 18 字符的固定短字符串，匹配稳定可靠，不受文件大小影响
- `multi_edit` 的原子性保证注入失败时不会破坏已有内容

### 5.2 第一步：创建骨架文件并记录 resourceId

在生成任何页面内容之前，先用 `create` 创建课件的 HTML 骨架文件。**创建成功后立即记录该文件的 `resourceId`**——后续所有 `multi_edit` 操作都依赖此 ID。骨架包含完整的 HTML 外层结构、共享资源声明和注入标记 `<!-- CW_PAGES -->`：

```html
<!DOCTYPE html>
<html lang="zh-CN">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>课件标题</title>
</head>
<body>

<div id="cw-loading" style="display:flex;align-items:center;justify-content:center;height:100vh;font-family:system-ui,sans-serif;font-size:18px;color:#999;">
  加载课件中...
</div>

<template class="page-shared">
  <!-- 按需填入共享资源，如 Tailwind CSS、字体等 -->
</template>

<!-- CW_PAGES -->

<script src="https://musk-online.fbcontent.cn/pub-musk-ai-studio/user/upload/admin/ywzK2MXJX95gG89MNUaD9V.js"></script>

</body>
</html>
```

**关键说明**：
- `<!-- CW_PAGES -->` 是页面注入标记，后续每批生成的 `<template>` 标签都会插入到此标记之前。
- 壳框架 `<script>` 标签位于标记之后，确保所有页面注入完成后壳 JS 仍在最末尾。
- 骨架文件很短（~20 行），Token 消耗极低。
- **记录 resourceId**：`create` 返回的 resourceId 是后续第一次 `multi_edit` 的操作目标，必须记录。

### 5.3 分批策略：按复杂度装箱

根据步骤 3.4 中每页标注的生成复杂度权重，将页面装入批次。

#### 装箱规则

1. **每批权重预算 = 20**。
2. 按大纲页码顺序，依次将页面放入当前批次，直到再放一页会超过预算 20，则关闭当前批次、开新批。
3. **不打乱页码顺序**——同一批内的页面必须是连续页码。
4. 如果整个课件的**总权重 ≤ 20**，全部页面归入**一批**，无需分批。
5. 单页权重 = 6（超重）时，若当前批次已有其他页面且再加会超预算，该页独占下一批。

#### 装箱示例

**示例 1：10 页常规课件**（封面1 + 目录1 + 讲解2×5 + 选择题4×2 + 小结1 = 总权重 21）

→ 第 1 批：封面(1) + 目录(1) + 讲解×5(10) + 选择题(4) + 小结(1) = 17 ≤ 20，再放选择题(4) 变 21 > 20，关闭
→ 第 2 批：选择题(4) = 4
→ **2 批**。

**示例 2：10 页重交互课件**（封面1 + 目录1 + 讲解2×3 + 拖拽6 + 填空4 + 选择4 + 小结1 = 总权重 23）

→ 第 1 批：封面(1) + 目录(1) + 讲解×3(6) + 拖拽(6) + 填空(4) = 18 ≤ 20，再放选择(4) 变 22 > 20，关闭
→ 第 2 批：选择(4) + 小结(1) = 5
→ **2 批**。

**示例 3：12 页简单课件**（封面1 + 目录1 + 讲解2×8 + 小结1 + 结束1 = 总权重 20）

→ 总权重 20 ≤ 20，**1 批生成全部 12 页**。

**示例 4：15 页超重课件**（封面1 + 目录1 + 讲解2×5 + 拖拽6×2 + 选择4×3 + 填空4 + 小结1 = 总权重 38）

→ 第 1 批：封面(1) + 目录(1) + 讲解×5(10) + 拖拽(6) = 18 ≤ 20，再放拖拽(6) 变 24 > 20，关闭
→ 第 2 批：拖拽(6) + 选择(4) + 选择(4) + 填空(4) = 18 ≤ 20，再放选择(4) 变 22 > 20，关闭
→ 第 3 批：选择(4) + 小结(1) = 5
→ **3 批**。

### 5.4 第二步：分批生成并注入（逐批串行，跟踪 resourceId）

> **⚠️ `multi_edit` 每次执行后会创建新文件（新 resourceId），原文件保持不变。因此每批注入后必须记录新文件的 resourceId，下一批须使用最新的 resourceId。各批次必须严格串行，禁止并行注入。**

每批生成完成后，**使用最新 resourceId 调用 `multi_edit`** 将本批 `<template>` 标签注入：

```
multi_edit:
  resourceId: <当前最新的 resourceId>
  editItems:
    - oldString: "<!-- CW_PAGES -->"
      newString: "<template class=\"page-data\" ...>本批第1页内容</template>\n\n<template class=\"page-data\" ...>本批第2页内容</template>\n\n<!-- CW_PAGES -->"
```

即：将标记替换为「本批 `<template>` 标签 + 标记」。**标记始终保留在末尾**，供下一批继续注入。

**注入后立即更新 resourceId**：`multi_edit` 执行成功后会返回新文件，**必须将新文件的 resourceId 记录下来**，替换之前保存的 resourceId。下一批注入、后续修改、验收读取等所有操作都必须使用这个最新的 resourceId。

**注入过程示意（含 resourceId 链式追踪）**：

```
创建骨架（create）→ 得到 resourceId_A
  ↓
第1批注入（multi_edit, resourceId_A）→ 得到 resourceId_B
  ↓
（如有更多批次）第2批注入（multi_edit, resourceId_B）→ 得到 resourceId_C → ...
  ↓
完成 → 最终课件 = 最后一个 resourceId 对应的文件（标记保留，供后续增页使用）
```

> 若总权重 ≤ 20，只有一次注入：create → resourceId_A → multi_edit → resourceId_B（完成）。

**常见错误**：多个批次同时对同一个 resourceId 调用 `multi_edit`，导致分叉出多个文件，每个文件只包含一个批次的页面。**必须等上一批注入完成、拿到新 resourceId 后，才能开始下一批注入。**

### 5.5 每批生成时须携带的上下文

每批生成的输入**不能只有本页大纲**，须包含完整的课件语境：

| 必传信息 | 说明 |
|----------|------|
| 课件基本信息 | 课题、学科、年级、教材版本、配色风格 |
| 教学目标 | 步骤 3.1 的 1～3 条学习目标 |
| 本批各页的完整大纲 | 步骤 3.3 模板的所有字段 |
| 本批在整体中的位置 | 第几页到第几页、前一页标题、后一页标题 |
| 相关原文/素材 | 本批页面需要用到的课文原文段落、知识点定义、背景资料等（从步骤 2 检索结果中摘取） |

### 5.6 生成与注入规则

- **串行注入、跟踪 resourceId**：各批次必须严格串行执行。每次 `multi_edit` 后记录新 resourceId，下一批使用最新 resourceId。禁止多批次并行注入同一 resourceId。
- **页数一致**：总页数必须与步骤 3 规划完全一致，不得多页、少页、合并或拆页。
- **内容一致**：每页内容须与大纲中的「必须出现的具体内容」逐条对应，不得遗漏、替换或大幅偏离。
- **引用准确**：课文原文、公式、定义等须与步骤 2 检索到的原始材料一致，禁止篡改或凭空编写。
- **交互实现**：大纲中标注了交互设计的页，须实现对应功能，并支持状态保存与恢复（`saveState` 上报 + `restoreState` 监听，供往回翻页时恢复用户离开时的状态）。
- **内容充实**：须按大纲填充实质内容，禁止只做版式骨架不填文字。
- **`<template>` 内不要写** `<!DOCTYPE>`/`<html>`/`<head>`/`<body>`——壳框架会自动包装。
- **`<template>` 内的 `<script>` 中不可出现字面量 `</template>`**，如需要用 `<\/template>` 替代。
- **禁止**在页面内容中使用 `<!-- CW_PAGES -->` 字面量（会干扰注入标记匹配）。

---

## 六、步骤 5 —— 验收与交付

### 6.1 逐页验收

全部批次注入完毕后，**逐页核对**：

| 验收项 | 标准 |
|--------|------|
| 页数一致性 | HTML 文件中的 `<template class="page-data">` 总数 = 步骤 3 规划的页数 |
| 内容一致性 | 每页实际内容与大纲「必须出现的具体内容」逐条对应 |
| 引用准确性 | 原文引用、定义、公式等与检索资料一致 |
| 交互完整性 | 标注了交互的页已实现 saveState 上报和 restoreState 监听，恢复后 UI 与离开时一致 |
| 内容充实度 | 讲解页有要点 ≥2 + 例证 ≥1；练习页有题干+答案；无「仅标题+一句话」的空壳页 |
| 无凑页 | 不存在两页讲同一件事且无递进 |
| data-id 连续性 | 所有页的 data-id 从 1 开始连续递增，无重复无跳号 |

- 不通过项须指明页码与缺失项，**对该批次重新生成并注入**（见 6.2）。
- 全部通过后交付。

### 6.2 如果需要修改个别页

若验收不通过或交付后用户要求修改某几页：

- **不要**尝试在 HTML 文件中匹配大段 `<template>` 内容做替换（大段 HTML 难以精确匹配）。
- **正确做法**：用 `multi_edit`（使用**最新 resourceId**）匹配需修改的页面中**短小、唯一的片段**（如特定的文字内容或属性值）进行精准替换。如果修改范围较大，可对该页的 `<template>` 整体替换——以 `<template class="page-data" data-id="N"` 开头到 `</template>` 结尾作为匹配依据。
- **更新 resourceId**：`multi_edit` 修改后会生成新文件，记得更新 resourceId。

### 6.3 交付

- **文件命名**：生成的 `.html` 文件名须与 `<title>` 标签中的课件标题保持一致（如 `<title>少年闰土</title>` 对应文件名 `少年闰土.html`），避免用户看到的文件名与课件标题不符产生误解。
- **保留注入标记**：交付的 HTML 文件中 `<!-- CW_PAGES -->` 标记**必须保留**，不得删除。该标记不影响壳框架运行，且为后续用户要求新增页面提供了注入点——新页面可直接通过 `multi_edit` 注入到标记位置，无需重建文件。
- 交付时说明「直接浏览器打开即可，无需其他文件或服务器」。

### 6.4 用户沟通规范

在整个生成过程中（包括进度汇报、错误说明、交付描述），与用户沟通时须遵守以下规则：

1. **禁止暴露 resourceId**：`resourceId` 是内部文件操作标识，用户无需知道其存在。禁止在任何面向用户的输出中提及 resourceId、文件 ID、资源 ID 等技术标识符。进度汇报时说「正在生成第 X 批页面」「已完成注入」等自然表述即可。
2. **文件称呼与 `<title>` 一致**：在整个工作流中（包括骨架创建、注入进度、验收报告、交付说明），提及课件文件时统一使用 `<title>` 标签中的课件标题作为名称。例如课件标题为「少年闰土」，则说「正在为《少年闰土》生成第 2 批页面」「《少年闰土》课件已生成完毕」，而不是说「文件 xxx.html」或「resourceId xxx 的文件」。
3. **不暴露内部流程细节**：分批策略、权重计算、装箱过程等是生成端的内部逻辑，用户只需知道「课件正在生成中」和最终结果。除非用户主动询问，否则不必解释为什么分了几批、每批包含哪些页等实现细节。

---

## 七、分页类型最低内容标准

规划与生成时须对照，每页不得低于最低要求：

| 页类型 | 最低内容要求 |
|--------|-------------|
| 封面 | 标题 + 副标题（学科/年级/教材版本） |
| 目录 | 各节标题，可含页码或图标 |
| 讲解/精读 | 核心内容（原文/定义/规则）+ 要点 2～4 条或例证 ≥1；**禁止**仅「标题+一句笼统话」 |
| 分析/讨论 | 分析框架或讨论问题 + 要点/示例 ≥2 |
| 例题 | 题干 + 完整解答过程 + 可选思路/易错点 |
| 练习 | 题干 + 答案（或选项）；若有空间须有解析或提示 |
| 小结/结束 | 归纳或回顾要点 ≥2 条，**禁止**空白 |

---

## 八、单页内容量预算（防溢出上限）

> 第七节定义了每页的**最低**内容标准，本节定义**最高**内容上限。每页内容在 960×540 画布内渲染，超出即溢出。规划大纲和生成内容时须同时满足下限和上限。

### 8.1 基础空间参数

| 参数 | 值 |
|------|-----|
| 画布尺寸 | 960 × 540 px |
| 推荐内边距 | 上下 30px、左右 40px |
| 可用内容区 | 880 × 480 px |
| 页标题占用 | ≈ 56px（含下边距） |
| 标题后剩余高度 | ≈ 424px |

### 8.2 文字容量速查（18px 正文基准）

| 布局方式 | 每行字数 | 内容区可用行数 | 安全字数上限 |
|----------|---------|-------------|------------|
| 单栏满宽（880px） | ~48字 | ~14行 | **≤ 400字** |
| 双栏（每栏 ~420px） | ~23字/栏 | ~14行/栏 | **≤ 200字/栏** |
| 卡片内（含内边距，宽 ~400px） | ~20字 | 视卡片高度 | **≤ 80字/卡** |

> 安全字数 = 理论容量 × 60%，已扣除段间距、区块间距、装饰元素等。

### 8.3 各页类型内容预算

#### 封面页

| 元素 | 上限 |
|------|------|
| 主标题 | 1行，≤ **12字**，字号 ≥ 40px |
| 副标题 | 1~2行，每行 ≤ **25字**，字号 18~20px |
| 装饰元素 | 不限，但不得遮挡标题 |

#### 目录页

| 元素 | 上限 |
|------|------|
| 页标题 | 1行，≤ 10字 |
| 目录条目 | ≤ **8条**，每条标题 ≤ **16字** |
| 条目描述（可选） | 每条 ≤ 10字 |

#### 讲解/精读页 —— 纯展示

| 元素 | 上限 |
|------|------|
| 页标题 | 1行，≤ 18字 |
| 正文总量 | ≤ **350字**（含所有要点、段落、注释） |

常见组合参考（可灵活选用，总量不超限）：

| 组合 | 各元素预算 |
|------|-----------|
| 要点式 | 要点 ≤ 5条 × 每条 ≤ 50字 + 总结 ≤ 100字 |
| 引用+分析式 | 引用框 ≤ 120字 + 分析 ≤ 3条 × 每条 ≤ 60字 + 小结 ≤ 50字 |
| 双栏对比式 | 左栏 ≤ 160字 + 右栏 ≤ 160字 + 标注 ≤ 30字 |

#### 例题页

| 元素 | 上限 |
|------|------|
| 页标题 | 1行，≤ 18字 |
| 题干 | ≤ **100字**（含条件、已知信息等） |
| 解题步骤 | ≤ **4步**，每步 ≤ **60字** |
| 易错提示/思路点拨（可选） | ≤ **60字** |
| 总文字量 | ≤ **400字** |

含 LaTeX 公式的例题，独立公式块按 2~3行文字估算，须从总量中扣减。

#### 讲解/精读页 —— 含交互（点击展开、逐步展示等）

| 元素 | 上限 |
|------|------|
| 页标题 | 1行 |
| 初始可见内容 | ≤ **250字** |
| 展开/揭示内容 | ≤ **100字** |

**空间预留规则**：初始态占用高度 ≤ 内容区的 70%（≈ 300px），展开增量 ≤ 30%（≈ 124px）。设计交互时先确认展开后会增加多少内容，再反推初始态应放多少。

#### 练习页

> 练习页按交互形式分为以下子类型。规划大纲时页类型标为「练习」，查预算时按实际交互形式对应下方子类型。

##### 选择题

| 元素 | 上限 |
|------|------|
| 题干 | ≤ **80字**（不超过 3行） |
| 选项 | ≤ **4个**，每项 ≤ **35字**（单行为佳，最多 1.5行） |
| 反馈/解析区 | ≤ **80字** |

须同时确认**答题前**和**答题后**（显示解析）两种状态均不溢出。

##### 填空题

| 元素 | 上限 |
|------|------|
| 说明文字 | ≤ 60字 |
| 填空区 | ≤ **4个空**，周围文字 ≤ 180字 |
| 反馈/答案区 | ≤ 60字 |

输入框按 40px 高估算，反馈区预留 ≥ 60px 高度。

##### 拖拽/排序题

| 元素 | 上限 |
|------|------|
| 指导语 | ≤ 40字 |
| 可拖拽项 | ≤ **6个**，每项标签 ≤ **15字** |
| 放置区 | ≤ **4个**，标签 ≤ 10字 |

须同时确认**初始态**（散落）和**完成态**（排好）均不溢出。

#### 分析/讨论页

| 元素 | 上限 |
|------|------|
| 页标题 | 1行 |
| 分析要点 | ≤ 3条，每条 ≤ 60字 |
| 辅助说明 | ≤ 100字 |
| 总文字量 | ≤ **300字** |

#### 小结/结束页

| 元素 | 上限 |
|------|------|
| 页标题 | 1行 |
| 总结要点 | 2~5条，每条 ≤ **40字** |
| 结语 | ≤ 30字 |

### 8.4 交互状态空间预算通则

凡含交互的页面，无论页类型，均须遵循：

| 规则 | 说明 |
|------|------|
| **展开类**（点击显示答案、展开解析） | 初始态 ≤ 70% 高度 + 展开增量 ≤ 30% 高度 |
| **逐步展示类**（动画分步、渐进呈现） | 所有步骤全部展示后的**终态**必须不溢出 |
| **输入类**（填空、文本输入框） | 每个输入框按 40px 高估算 + 反馈区预留 ≥ 60px |
| **多状态通则** | 设计时须逐一列出所有可能的 UI 状态，每个状态均需在 480px 内容区高度内（即 540px 画布减去上下 30px 内边距） |

### 8.5 特殊元素空间估算

页面含以下元素时，须从该页类型的文字预算中**扣减**相应额度：

| 元素 | 估算占用高度 | 文字预算扣减量 |
|------|------------|-------------|
| 引用/原文框（带背景+内边距） | ≈ 80~120px | 减少 ≈ 100字 |
| 表格（3~5行） | ≈ 140~200px | 减少 ≈ 150字 |
| 图片/示意图（全宽） | 高度 ≤ 200px | 按实际高度折算，每 100px ≈ 减少 120字 |
| LaTeX 独立公式块 | ≈ 50~80px | 按 2~3行文字计 |
| 卡片网格（2×2） | ≈ 280~320px | 仅剩 ≈ 100~140px 给标题和说明 |
